# GUI-Agent-Harness

./: .gitattributes  .gitignore  .gitmodules  README.md  SKILL.md  eval_osworld_task.py  pyproject.toml  requirements.txt
benchmarks/: README.md
benchmarks/guiact/: README.md
benchmarks/mmbench_gui_l2/: README.md
benchmarks/osworld/: README.md  eval_osworld_task.py  multi_apps.md  run_batch.sh  run_osworld_task.py  thunderbird_gpt55_run_errors.md  vlc_gpt55_run_errors.md
benchmarks/screenspot_pro/: PIPELINE_FLOW.html  README.md  UI_VISION_OPTIMIZATION_LOG.md  arbitrate_two_arms.py  challenge_pass_v5c.py  finalize_full_results.py  fix_kimi_thinking_errors.py  generate_paper_figures.py  make_ui_vision_slice.py  model_profiles.py  prepare_gui_grounding_datasets.py  prepare_screenspot_versions.py  probe_ablation_gpt.py  probe_ablation_qwen.py  probe_claude_ccstyle.py  probe_claude_ccstyle_1m.py  probe_claude_ccstyle_disp.py  probe_claude_cli.py  probe_claude_format.py  probe_claude_meridian.py  probe_claude_rescale.py  probe_claude_thinking.py  probe_gpt_format.py  probe_gpt_hints_reversal.py  probe_gpt_thinking.py  probe_harness_norm.py  (+42 more)
docs/: README_CN.md  agentic-programming.md  architecture.md  benchmark_runs.md  core.md  install.md
gui_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gui_harness/: __init__.py  __main__.py  create.py  main.py  openprogram_compat.py  runtime.py
harness_functions/: functions.py
scripts/: agent.py  app_memory.py  install.ps1  install.sh  setup.sh  ui_detector.py
training/: README.md
(+176 files in other folders)
